--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: #111 url('images/background.jpg') no-repeat center center fixed;
+  background: #111 url('images/graffiti-237656.jpg') no-repeat center center fixed;
   background-size: cover;
   font-family: 'Arial', sans-serif;
   height: 100vh;
