--- a/style.css
+++ b/style.css
@@ -53,3 +53,22 @@ body {
 }
 
 
+.rarity-common {
+  color: #b0b0b0;
+}
+
+.rarity-uncommon {
+  color: #4caf50;
+}
+
+.rarity-rare {
+  color: #2196f3;
+}
+
+.rarity-epic {
+  color: #9c27b0;
+}
+
+.rarity-mythic {
+  color: #e53935;
+}
